+ section_menu_html

--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,9 @@ img {
   fill: var(--typical-color-text);
 }
 
-/* ----------------- section1 -----------------*/
+/* ----------------- section menu -----------------*/
+
+
 
 /* ----------------- section2 -----------------*/
 
