--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,8 @@ img {
   border: none;
   border-radius: 16px;
 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   font-weight: 500;
   font-size: 30px;
   line-height: 1.22;
@@ -272,6 +274,7 @@ img {
 
 .hero-icons {
   fill: var(--typical-color-text);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-icons:is(:hover, :focus) {
