--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  width: 1038px;
+  /* width: 1038px; */
 }
 
 .sliders {
