--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ img {
   transform: scale(1);
 }
 
-.btn{
+/* .slider-btn{
   position: relative;
   width: 32px;
   height: 32px;
@@ -504,7 +504,8 @@ img {
   border-radius: 0;
   border: 0;
   cursor: pointer;
-}
+} */
+
 .button-svg{
   margin: 0;
   padding: 0;
