--- a/css/style.css
+++ b/css/style.css
@@ -552,3 +552,141 @@ img {
     height: 23px;
 }
 /* ----------------- footer -----------------*/
+.footer {
+  padding-top: 24px;
+  /* background: #C9C9C9; */
+}
+.container {
+}
+.footer-container {
+  display: flex;
+  align-items: center;
+}
+.footer-navigation-container {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+.footer-navigation {
+}
+.logo-icon {
+  fill: #F3F3F3;
+  margin-top: 64px;
+  margin-left: 85px;
+  margin-right: 16px;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.logo-icon:is(:hover, :focus) {
+  fill: rgba(188, 26, 26, 0.5);
+}
+.footer-logo {
+  font-family: 'Montserrat';
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #F3F3F3;
+  font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-logo:is(:hover, :focus) {
+  color: var(--typical-active-color);
+}
+.link {
+}
+.footer-list {
+  display: block;
+  align-items: center;
+  margin-right: auto;
+}
+.list {
+}
+.footer-item {
+  
+}
+.footer-link {
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  font-style: normal;
+  color: #F3F3F3;
+
+  margin-top: 24px;
+  margin-left: 157px; 
+  margin-right: 173px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-link:is(:hover, :focus) {
+  color: var(--typical-active-color);
+}
+.address-container {
+}
+.address {
+}
+.footer-address-list {
+}
+.footer-address-item {
+}
+.footer-address-link {
+}
+.footer-address-icon {
+  fill: #F3F3F3;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-address-icon:is(:hover, :focus) {
+  fill: var(--typical-active-color);
+}
+.footer-address {
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  color: #F3F3F3;
+  font-style: normal; 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-address:is(:hover, :focus) {
+  color: var(--typical-active-color);
+}
+
+.footer-mail {
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  color: #F3F3F3;
+  font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-mail:is(:hover, :focus) {
+  color: var(--typical-active-color);
+}
+
+.footer-soc-list {
+}
+.footer-soc-item {
+}
+.footer-soc-link {
+  /* fill: #F3F3F3; */
+}
+.footer-soc-icon {
+  fill: #F3F3F3;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-left: 218px;
+}
+.footer-soc-icon:is(:hover, :focus) {
+  fill: var(--typical-active-color);
+}
+.footer-text {
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.21;
+  color: #979797;
+  font-style: normal;
+  margin-left: 405px;
+}
