--- a/css/style.css
+++ b/css/style.css
@@ -561,6 +561,7 @@ img {
 .footer-container {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .footer-navigation-container {
   display: flex;
@@ -568,6 +569,8 @@ img {
   margin-right: auto;
 }
 .footer-navigation {
+  display: flex;
+  align-items: center;
 }
 .logo-icon {
   fill: #F3F3F3;
@@ -625,8 +628,10 @@ img {
 .address {
 }
 .footer-address-list {
+  
 }
 .footer-address-item {
+  display: flex;
 }
 .footer-address-link {
 }
@@ -667,6 +672,7 @@ img {
 }
 
 .footer-soc-list {
+  /* display: flex; */
 }
 .footer-soc-item {
 }
