--- a/css/style.css
+++ b/css/style.css
@@ -151,12 +151,14 @@ img {
   background-color: transparent;
   padding: 10px 33px;
   transition: color var(--transition-duration) var(--transition-timing-function),
-    border-color var(--transition-duration) var(--transition-timing-function);
+    border-color var(--transition-duration) var(--transition-timing-function)
+    background-color var(--transition-duration) var(--transition-timing-function);
 }
 
 .header-button:is(:hover, :focus) {
   color: var(--typical-active-color);
   border-color: var(--typical-active-color);
+  background-color: var(--btn-bc);
 }
 
 /* ----------------- hero -----------------*/
@@ -169,6 +171,7 @@ img {
 .hero-container {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .hero-left-container {
@@ -283,6 +286,16 @@ img {
   color: var(--typical-color-text);
 }
 
+.hero-right-container::before {
+  content: '';
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: rgba(188, 26, 26, 0.8);
+  position: absolute;
+  right: 116%;
+  bottom: 33%;
+}
 .hero-soc-list {
   display: flex;
   flex-direction: column;
@@ -303,7 +316,7 @@ img {
 .hero-link {
   width: 100%;
   height: 100%;
-  padding: 9px;
+  padding: 8px 10px 10px 8px;
   border-radius: 16px;
   border: 1px solid var(--typical-color-text);
   color: var(--typical-color-text);
