--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,10 @@ img {
   position: relative;
   border-radius: 8px;
   overflow: hidden;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .border-icon {
   position: absolute;
@@ -432,8 +435,20 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  transition: background-color, fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
+.video-focus:focus .border-icon {
+  background-color: #100F0F;
+  fill: rgba(243, 243, 243, 0.9);;
+}
+
+.video-item:hover .border-icon {
+  background-color: #100F0F;
+  fill: rgba(243, 243, 243, 0.9);;
+}
 
 .video-list {
   display: flex;
@@ -441,8 +456,16 @@ img {
   list-style: none;
 }
 
+.video-item {
+  border-radius: 8px;
+}
+
 .video-item:not(:last-child) {
   margin-right: 100px;
+}
+
+.video-item:hover {
+  box-shadow: 7px 6px 10px -5px rgba(143,140,143,1);
 }
 
 .title-video {
